--- a/index-cytotec.html
+++ b/index-cytotec.html
@@ -10,8 +10,8 @@
 <body>
     <header>
         <div class="header-top">
-            <div class="wrapper-fon clear">
-                <div class="clear">
+            <div class="wrapper-fon">
+                <div class="nav-top">
                     <nav class="navigation">
                         <div class="logotipe"><a href="/" class="logo"><img src="./img/farmital-logo.png" alt="Інтернет Аптека FarmItal"></a></div>
                         <ul class="nav">
@@ -46,19 +46,21 @@
             </div>
         </div>
     </header>
-    <div class="main-price wrapper clear">
+    <div class="wrapper">
         <h1>Сайтотек / Cytotec / Цитотек</h1>
         <p class="prod">Виробник: <b>Італія</b></p>
-        <div class="foto-cytotec">
-            <img class="foto" src="./img/cytotec2.jpg" alt="купити сайтотек,cytotec,цитотек в Україні">
-        </div>
-        <div class="price-cytotec">
-            <h3 class="block">Контактна інформація:</h3>
-            <p><a href="tel:+380979301788" class="phone-price">+38(097) 930-17-88</a></p>
-            <p><a href="tel:+380959371699" class="phone-price">+38(095) 937-16-99</a></p>
-            <p><a href="tel:+380631294099" class="phone-price">+38(063) 129-40-99</a></p>
-            <p class="price"><b>Ціна: 750 грн/уп.</b></p>
-            <p class="stock"><b>В наявності</b></p>
+        <div class="main-price clear">
+            <div class="foto-cytotec">
+                <img class="foto" src="./img/cytotec2.jpg" alt="купити сайтотек,cytotec,цитотек в Україні">
+            </div>
+            <div class="price-cytotec">
+                <h3 class="block">Контактна інформація:</h3>
+                <p><a href="tel:+380979301788" class="phone-price">+38(097) 930-17-88</a></p>
+                <p><a href="tel:+380959371699" class="phone-price">+38(095) 937-16-99</a></p>
+                <p><a href="tel:+380631294099" class="phone-price">+38(063) 129-40-99</a></p>
+                <p class="price"><b>Ціна: 750 грн/уп.</b></p>
+                <p class="stock"><b>В наявності</b></p>
+            </div>
         </div>
     </div>
     <div class="main-info wrapper">
@@ -150,25 +152,27 @@
                 Суворо дотримуватися дозування, визначену лікарем.</p>
             <h2>Умови зберігання:</h2>
             <p>Температура зберігання таблеток Сайтотек - до 30 градусів Цельсія. Термін придатності препарату - 3 роки.</p>
-        </div>
+    </div>
     <footer>
         <div class="footer-top">
             <div class="wrapper-fon">
                 <div class="row">
                     <div class="logotipe-bottom"><a href="/" class="logo"><img src="./img/farmital-logo.png" alt="Інтернет Аптека FarmItal"></a></div>
-                    <ul class="basic-inf column top">
-                        <li><a href="/"><b>Головна</b></a></li>
-                        <li><a href="index-medics.html"><b>Асортимент Аптеки</b></a></li>
-                        <li><a href="index-contact.html"><b>Контакти</b></a></li>
-                    </ul>
+                    <div class="column top">
+                        <ul class="basic-inf">
+                            <li><a href="/"><b>Головна</b></a></li>
+                            <li><a href="index-medics.html"><b>Асортимент Аптеки</b></a></li>
+                            <li><a href="index-contact.html"><b>Контакти</b></a></li>
+                        </ul>
+                    </div>
                     <div class="phone-bottom column top">
                         <p><a href="tel:+380979301788" class="tel-bottom"><b>+38(097) 930-17-88</b></a></p>
                         <p><a href="tel:+380959371699"><b>+38(095) 937-16-99</b></a></p>
                         <p><a href="tel:+380631294099"><b>+38(063) 129-40-99</b></a></p>
                     </div>
                     <div class="mail column top">
-                        <p class="url"><a href="mailto:likital687@gmail.com"><b>likital687@gmail.com</b></a></p>
-                        <p class="viber"><a href="viber://chat?number=%2B380979301788"><b>FarmItal</b></a></p>
+                        <p><a href="mailto:likital687@gmail.com" class="url"><b>likital687@gmail.com</b></a></p>
+                        <p><a href="viber://chat?number=%2B380979301788" class="viber"><b>FarmItal</b></a></p>
                     </div>
                 </div>
             </div>
