--- a/index-iruxol.html
+++ b/index-iruxol.html
@@ -11,8 +11,8 @@
 <body>
     <header>
         <div class="header-top">
-            <div class="wrapper-fon clear">
-                <div class="clear">
+            <div class="wrapper-fon">
+                <div class="nav-top">
                     <nav class="navigation">
                         <div class="logotipe"><a href="/" class="logo"><img src="./img/farmital-logo.png" alt="Інтернет Аптека FarmItal"></a></div>
                         <ul class="nav">
@@ -47,20 +47,23 @@
             </div>
         </div>
     </header>
-    <div class="main-price wrapper clear">
+    <div class="wrapper">
         <h1>Іруксол / Iruxol / Ируксол</h1>
         <p class="prod">Виробник: <b>Італія</b></p>
-        <div class="foto-iruxol">
-            <img class="foto" src="img/iruxol-1.jpg" alt="купити ируксол,iruxol,іруксол в Україні">
+        <div class="main-price clear">
+            <div class="foto-iruxol">
+                <img class="foto" src="img/iruxol-1.jpg" alt="купити ируксол,iruxol,іруксол в Україні">
+            </div>
+            <div class="price-iruxol">
+                <h3 class="block">Контактна інформація:</h3>
+                <p><a href="tel:+380979301788" class="phone-price">+38(097) 930-17-88</a></p>
+                <p><a href="tel:+380959371699" class="phone-price">+38(095) 937-16-99</a></p>
+                <p><a href="tel:+380631294099" class="phone-price">+38(063) 129-40-99</a></p>
+                <p class="price"><b>Ціна: 630 грн/уп.</b></p>
+                <p class="stock"><b>В наявності</b></p>
+            </div>
         </div>
-        <div class="price-iruxol">
-            <h3 class="block">Контактна інформація:</h3>
-            <p><a href="tel:+380979301788" class="phone-price">+38(097) 930-17-88</a></p>
-            <p><a href="tel:+380959371699" class="phone-price">+38(095) 937-16-99</a></p>
-            <p><a href="tel:+380631294099" class="phone-price">+38(063) 129-40-99</a></p>
-            <p class="price"><b>Ціна: 630 грн/уп.</b></p>
-            <p class="stock"><b>В наявності</b></p>
-        </div>
+    </div>
         <div class="main-info wrapper">
             <h2>Купити Іруксол - Iruxol:</h2>
             <p>Саме в FarmItal ви можете купити іруксол,iruxol,ируксол в Україні, Гарантовано Якісний!</p>
@@ -102,17 +105,18 @@
             <h2>Умови зберігання:</h2>
             <p>Зберігати у недоступному для дітей місці при кімнатній температурі (15- 25°С).</p>
         </div>
-    </div>
     <footer>
         <div class="footer-top">
             <div class="wrapper-fon">
                 <div class="row">
                     <div class="logotipe-bottom"><a href="/" class="logo"><img src="./img/farmital-logo.png" alt="Інтернет Аптека FarmItal"></a></div>
-                    <ul class="basic-inf column top">
-                        <li><a href="/"><b>Головна</b></a></li>
-                        <li><a href="index-medics.html"><b>Асортимент Аптеки</b></a></li>
-                        <li><a href="index-contact.html"><b>Контакти</b></a></li>
-                    </ul>
+                    <div class="column top">
+                        <ul class="basic-inf">
+                            <li><a href="/"><b>Головна</b></a></li>
+                            <li><a href="index-medics.html"><b>Асортимент Аптеки</b></a></li>
+                            <li><a href="index-contact.html"><b>Контакти</b></a></li>
+                        </ul>
+                    </div>
                     <div class="phone-bottom column top">
                         <p><a href="tel:+380979301788" class="tel-bottom"><b>+38(097) 930-17-88</b></a></p>
                         <p><a href="tel:+380959371699"><b>+38(095) 937-16-99</b></a></p>
