--- a/index-zymafluor.html
+++ b/index-zymafluor.html
@@ -10,8 +10,8 @@
 <body>
     <header>
         <div class="header-top">
-            <div class="wrapper-fon clear">
-                <div class="clear">
+            <div class="wrapper-fon">
+                <div class="nav-top">
                     <nav class="navigation">
                         <div class="logotipe"><a href="/" class="logo"><img src="./img/farmital-logo.png" alt="Інтернет Аптека FarmItal"></a></div>
                         <ul class="nav">
@@ -46,23 +46,25 @@
             </div>
         </div>
     </header>
-    <div class="main-price wrapper clear">
+    <div class="wrapper">
         <h1>Зімафлуор / Zymafluor / Зимафлуор - (Німеччина)</h1>
         <p class="prod">Виробник: <b>Німеччина</b></p>
-        <div class="foto-zymafluor">
-            <img class="foto" src="./img/zymafluor.jpg" alt="купити зімафлуор,zymafluor,зимафлуор в Україні">
-        </div>
-        <div class="price-zymafluor">
-            <h3 class="block">Контактна інформація:</h3>
-            <p><a href="tel:+380979301788" class="phone-price">+38(097) 930-17-88</a></p>
-            <p><a href="tel:+380959371699" class="phone-price">+38(095) 937-16-99</a></p>
-            <p><a href="tel:+380631294099" class="phone-price">+38(063) 129-40-99</a></p>
-            <p class="price"><b>Ціна: 750 грн/уп.</b></p>
-            <p class="stock"><b>В наявності</b></p>
+        <div class="main-price clear">
+            <div class="foto-zymafluor">
+                <img class="foto" src="./img/zymafluor.jpg" alt="купити зімафлуор,zymafluor,зимафлуор в Україні">
+            </div>
+            <div class="price-zymafluor">
+                <h3 class="block">Контактна інформація:</h3>
+                <p><a href="tel:+380979301788" class="phone-price">+38(097) 930-17-88</a></p>
+                <p><a href="tel:+380959371699" class="phone-price">+38(095) 937-16-99</a></p>
+                <p><a href="tel:+380631294099" class="phone-price">+38(063) 129-40-99</a></p>
+                <p class="price"><b>Ціна: 750 грн/уп.</b></p>
+                <p class="stock"><b>В наявності</b></p>
+            </div>
         </div>
     </div>
     <div class="main-info wrapper">
-        <h2>Купити Зімафлуор,Зимафлуор - Zymafluor:</h2>
+        <h2>Купити Зімафлуор - Zymafluor:</h2>
         <p>Саме в FarmItal ви можете купити Зімафлуор, Zymafluor,Зимафлуор в Україні. Гарантовано якісний вітамінний комплекс з Німеччини!</p>
         <p>Доставка Zymafluor здійснюється транспортними компаніями, терміни виконання замовлення обумовлюються менеджером Фармітал.
             Ви можете замовити Зімафлуор,Зимафлуор у містах: Одеса, Херсон, Чернігів, Сєверодонецьк, Бердянськ, Бровари, Дніпро, Вінниця, Київ, Слов'янськ, Полтава, Краматорськ, Біла Церква, Кам'янське, Маріуполь, Чернівці, Олександрія, Кам'янець-Подільський, Львів, Запоріжжя, Кропивницький, Житомир, Івано-Франківськ, Суми, Черкаси, Костянтинівка, Мелітополь, Кривий Ріг, Рівне, Луцьк, Нікополь, Павлоград, Ужгород, Кременчук, Лисичанськ, Хмельницький, Тернопіль, Харків, Миколаїв, а також в інших населених пунктах України.
@@ -125,11 +127,13 @@
             <div class="wrapper-fon">
                 <div class="row">
                     <div class="logotipe-bottom"><a href="/" class="logo"><img src="./img/farmital-logo.png" alt="Інтернет Аптека FarmItal"></a></div>
-                    <ul class="basic-inf column top">
-                        <li><a href="/"><b>Головна</b></a></li>
-                        <li><a href="index-medics.html"><b>Асортимент Аптеки</b></a></li>
-                        <li><a href="index-contact.html"><b>Контакти</b></a></li>
-                    </ul>
+                    <div class="column top">
+                        <ul class="basic-inf">
+                            <li><a href="/"><b>Головна</b></a></li>
+                            <li><a href="index-medics.html"><b>Асортимент Аптеки</b></a></li>
+                            <li><a href="index-contact.html"><b>Контакти</b></a></li>
+                        </ul>
+                    </div>
                     <div class="phone-bottom column top">
                         <p><a href="tel:+380979301788" class="tel-bottom"><b>+38(097) 930-17-88</b></a></p>
                         <p><a href="tel:+380959371699"><b>+38(095) 937-16-99</b></a></p>
