--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <header>
         <div class="header-top">
-            <div class="wrapper-fon clear">
-                <div class="clear">
+            <div class="wrapper-fon">
+                <div class="nav-top">
                     <nav class="navigation">
                         <div class="logotipe"><a href="/" class="logo"><img src="./img/farmital-logo.png" alt="Інтернет Аптека FarmItal"></a></div>
                         <ul class="nav">
@@ -82,7 +82,7 @@
     <div class="popular wrapper">
         <h2>Найпопулярніші ліки</h2>
         <div class="medics">
-            <div class="iruxol ret">
+            <div class="iruxol ret column">
                 <img src="img/irx.jpg" alt="купити ируксол,iruxol,іруксол в Україні">
                 <h2>Іруксол - лікування уражень шкіри і ран шляхом ферментативного очищення від некротичних мас ігнійних нальотів. </h2>
                 <p class="price"><b>Ціна: 630 грн/уп.</b></p>
@@ -90,14 +90,14 @@
                 <p><b><a href="index-iruxol.html">Купити Іруксол на FarmItal</a></b></p>
 
             </div>
-            <div class="colchicine ret">
+            <div class="colchicine ret column">
                 <img src="img/colh.jpg" alt="купити колхіцин,colchicine,колхицин в Україні">
                 <h2>Колхіцин - ефективно знімає біль при гострих нападах падагри, має виражений протизапальний ефект.Лікування падагри.</h2>
-                <p class="price"><b>Ціна: 425 грн/уп.</b></p>
+                <p class="price"><b>Ціна: 410 грн/уп.</b></p>
                 <p class="stock"><b>В наявності</b></p>
                 <p><b><a href="index-colchicine.html">Купити Колхіцин на FarmItal</a></b></p>
             </div>
-            <div class="zarontin ret">
+            <div class="zarontin ret column">
                 <img src="img/zarontin12.jpg" alt="купити заронтін, zarontin,заронтин в Україні">
                 <h2>Заронтін - Виявляє протисудомну, міорелаксивну і анальгетичну дію.Знижує ймовірність епілептичного нападу.</h2>
                 <p class="price"><b>Ціна: 1200 грн/уп.</b></p>
@@ -111,11 +111,13 @@
             <div class="wrapper-fon">
                 <div class="row">
                     <div class="logotipe-bottom"><a href="/" class="logo"><img src="./img/farmital-logo.png" alt="Інтернет Аптека FarmItal"></a></div>
-                    <ul class="basic-inf column top">
-                        <li><a href="/"><b>Головна</b></a></li>
-                        <li><a href="index-medics.html"><b>Асортимент Аптеки</b></a></li>
-                        <li><a href="index-contact.html"><b>Контакти</b></a></li>
-                    </ul>
+                    <div class="column top">
+                        <ul class="basic-inf">
+                            <li><a href="/"><b>Головна</b></a></li>
+                            <li><a href="index-medics.html"><b>Асортимент Аптеки</b></a></li>
+                            <li><a href="index-contact.html"><b>Контакти</b></a></li>
+                        </ul>
+                    </div>
                     <div class="phone-bottom column top">
                         <p><a href="tel:+380979301788" class="tel-bottom"><b>+38(097) 930-17-88</b></a></p>
                         <p><a href="tel:+380959371699"><b>+38(095) 937-16-99</b></a></p>
