--- a/rus/index-colchicine.html
+++ b/rus/index-colchicine.html
@@ -11,8 +11,8 @@
 <body>
     <header>
         <div class="header-top">
-            <div class="wrapper-fon clear">
-                <div class="clear">
+            <div class="wrapper-fon">
+                <div class="nav-top">
                     <nav class="navigation">
                         <div class="logotipe"><a href="/" class="logo"><img src="./img/farmital-logo.png" alt="Интернет Аптека FarmItal"></a></div>
                         <ul class="nav">
@@ -47,19 +47,21 @@
             </div>
         </div>
     </header>
-    <div class="main-price wrapper clear">
+    <div class="wrapper">
         <h1>Колхіцин / Colchicine / Колхицин</h1>
         <p class="prod">Производитель: <b>Италия</b></p>
-        <div class="foto-colchicine">
-            <img class="foto" src="img/cochicine3.jpg" alt="купить колхіцин,colchicine,колхицин в Украине">
-        </div>
-        <div class="price-colchicine">
-            <h3 class="block">Контактная информация:</h3>
-            <p><a href="tel:+380979301788" class="phone-price">+38(097) 930-17-88</a></p>
-            <p><a href="tel:+380959371699" class="phone-price">+38(095) 937-16-99</a></p>
-            <p><a href="tel:+380631294099" class="phone-price">+38(063) 129-40-99</a></p>
-            <p class="price"><b>Цена: 425 грн/уп.</b></p>
-            <p class="stock"><b>В наличии</b></p>
+        <div class="main-price">
+            <div class="foto-colchicine">
+                <img class="foto" src="img/colh.jpg" alt="купить колхіцин,colchicine,колхицин в Украине">
+            </div>
+            <div class="price-colchicine">
+                <h3 class="block">Контактная информация:</h3>
+                <p><a href="tel:+380979301788" class="phone-price">+38(097) 930-17-88</a></p>
+                <p><a href="tel:+380959371699" class="phone-price">+38(095) 937-16-99</a></p>
+                <p><a href="tel:+380631294099" class="phone-price">+38(063) 129-40-99</a></p>
+                <p class="price"><b>Цена: 410 грн/уп.</b></p>
+                <p class="stock"><b>В наличии</b></p>
+            </div>
         </div>
     </div>
     <div class="main-info wrapper">
@@ -121,11 +123,13 @@
             <div class="wrapper-fon">
                 <div class="row">
                     <div class="logotipe-bottom"><a href="/" class="logo"><img src="./img/farmital-logo.png" alt="Интернет Аптека FarmItal"></a></div>
-                    <ul class="basic-inf column top">
-                        <li><a href="/"><b>Главная</b></a></li>
-                        <li><a href="index-medics.html"><b>Ассортимент Аптеки</b></a></li>
-                        <li><a href="index-contact.html"><b>Контакты</b></a></li>
-                    </ul>
+                    <div class="column top">
+                        <ul class="basic-inf">
+                            <li><a href="/"><b>Главная</b></a></li>
+                            <li><a href="index-medics.html"><b>Ассортимент Аптеки</b></a></li>
+                            <li><a href="index-contact.html"><b>Контакты</b></a></li>
+                        </ul>
+                    </div>
                     <div class="phone-bottom column top">
                         <p><a href="tel:+380979301788" class="tel-bottom"><b>+38(097) 930-17-88</b></a></p>
                         <p><a href="tel:+380959371699"><b>+38(095) 937-16-99</b></a></p>
