--- a/rus/index-medics.html
+++ b/rus/index-medics.html
@@ -11,11 +11,10 @@
 </head>
 
 <body>
-    <header>
-        <div class="header-top">
-            <div class="wrapper-fon clear">
-                <div class="clear">
-                    <nav class="navigation">
+    <div class="header-top">
+        <div class="wrapper-fon">
+            <div class="nav-top">
+                <nav class="navigation">
                         <div class="logotipe"><a href="/" class="logo"><img src="./img/farmital-logo.png" alt="Интернет Аптека FarmItal"></a></div>
                         <ul class="nav">
                             <li>
@@ -68,7 +67,7 @@
             </div>
             <a href="index-zarontin.html">
                 <div class="zarontin-price">
-                    <img class="zaron" src="./img/zarontin.jpeg" alt="купить заронтин, заронтин,заронтин в Украине">
+                    <img class="zaron" src="./img/zarontin12.jpg" alt="купить заронтин, заронтин,заронтин в Украине">
                     <p class="detal-inf">Цена: 1200 грн/уп.</p>
                 </div>
             </a>
@@ -89,8 +88,8 @@
             </div>
             <a href="index-colchicine.html">
                 <div class="colchicine-price">
-                    <img src="./img/colc.png" alt="купить колхіцин,colchicine,колхицин в Украине">
-                    <p class="detal-inf">Цена: 425 грн/уп.</p>
+                    <img src="./img/colh.jpg" alt="купить колхіцин,colchicine,колхицин в Украине">
+                    <p class="detal-inf">Цена: 410 грн/уп.</p>
                 </div>
             </a>
         </div>
@@ -106,7 +105,7 @@
             </div>
             <a href="index-iruxol.html">
                 <div class="iruxol-price">
-                    <img class="irux" src="./img/iruxol4.jpg" alt="купить ируксол,iruxol,ируксол в Украине">
+                    <img class="irux" src="./img/irx.jpg" alt="купить ируксол,iruxol,ируксол в Украине">
                     <p class="detal-inf">Цена: 630 грн/уп.</p>
                 </div>
             </a>
@@ -123,7 +122,7 @@
             <a href="index-cytotec.html">
                 <div class="cytotec-price">
                     <img class="cyt" src="./img/cytotec.jpg" alt="купить сайтотек,cytotec,цитотек в Украине">
-                    <p class="detal-inf">Цена: 730 грн/уп.</p>
+                    <p class="detal-inf">Цена: 750 грн/уп.</p>
                 </div>
             </a>
         </div>
@@ -142,7 +141,7 @@
             <a href="index-zymafluor.html">
                 <div class="zymafluor-price">
                     <img class="zym" src="./img/zymafluor.jpg" alt="купить зимафлуор,zymafluor,зимафлуор в Украине">
-                    <p class="detal-inf">Цена: 925 грн/уп.</p>
+                    <p class="detal-inf">Цена: 750 грн/уп.</p>
                 </div>
             </a>
         </div>
@@ -178,11 +177,13 @@
             <div class="wrapper-fon">
                 <div class="row">
                     <div class="logotipe-bottom"><a href="/" class="logo"><img src="./img/farmital-logo.png" alt="Интернет Аптека FarmItal"></a></div>
-                    <ul class="basic-inf column top">
-                        <li><a href="/"><b>Главная</b></a></li>
-                        <li><a href="index-medics.html"><b>Ассортимент Аптеки</b></a></li>
-                        <li><a href="index-contact.html"><b>Контакты</b></a></li>
-                    </ul>
+                    <div class="column top">
+                        <ul class="basic-inf">
+                            <li><a href="/"><b>Главная</b></a></li>
+                            <li><a href="index-medics.html"><b>Ассортимент Аптеки</b></a></li>
+                            <li><a href="index-contact.html"><b>Контакты</b></a></li>
+                        </ul>
+                    </div>
                     <div class="phone-bottom column top">
                         <p><a href="tel:+380979301788" class="tel-bottom"><b>+38(097) 930-17-88</b></a></p>
                         <p><a href="tel:+380959371699"><b>+38(095) 937-16-99</b></a></p>
