--- a/rus/index-zymafluor.html
+++ b/rus/index-zymafluor.html
@@ -10,8 +10,8 @@
 <body>
     <header>
         <div class="header-top">
-            <div class="wrapper-fon clear">
-                <div class="clear">
+            <div class="wrapper-fon">
+                <div class="nav-top">
                     <nav class="navigation">
                         <div class="logotipe"><a href="/" class="logo"><img src="./img/farmital-logo.png" alt="Интернет Аптека FarmItal"></a></div>
                         <ul class="nav">
@@ -46,23 +46,25 @@
             </div>
         </div>
     </header>
-    <div class="main-price wrapper clear">
+    <div class="wrapper">
         <h2>Зімафлуор / Zymafluor / Зимафлуор - (Німеччина)</h2>
         <p class="prod">Виробник: <b>Німеччина</b></p>
-        <div class="foto-zymafluor">
-            <img class="foto" src="./img/zymafluor.jpg" alt="купить зимафлуор,zymafluor,зимафлуор в Украине">
-        </div>
-        <div class="price-zymafluor">
-            <h3 class="block">Контактная информация:</h3>
-            <p><a href="tel:+380979301788" class="phone-price">+38(097) 930-17-88</a></p>
-            <p><a href="tel:+380959371699" class="phone-price">+38(095) 937-16-99</a></p>
-            <p><a href="tel:+380631294099" class="phone-price">+38(063) 129-40-99</a></p>
-            <p class="price"><b>Цена: 925 грн/уп.</b></p>
-            <p class="stock"><b>В наличии</b></p>
+        <div class="main-price clear">
+            <div class="foto-zymafluor">
+                <img class="foto" src="./img/zymafluor.jpg" alt="купить зимафлуор,zymafluor,зимафлуор в Украине">
+            </div>
+            <div class="price-zymafluor">
+                <h3 class="block">Контактная информация:</h3>
+                <p><a href="tel:+380979301788" class="phone-price">+38(097) 930-17-88</a></p>
+                <p><a href="tel:+380959371699" class="phone-price">+38(095) 937-16-99</a></p>
+                <p><a href="tel:+380631294099" class="phone-price">+38(063) 129-40-99</a></p>
+                <p class="price"><b>Цена: 750 грн/уп.</b></p>
+                <p class="stock"><b>В наличии</b></p>
+            </div>
         </div>
     </div>
     <div class="main-info wrapper">
-        <h2>Купить Зимафлуор,Зимафлуор - Zymafluor:</h2>
+        <h2>Купить Зимафлуор - Zymafluor:</h2>
         <p>Именно в FarmItal вы можете купить Зимафлуор, Zymafluor,Зимафлуор в Украине. Гарантирован качественный витаминный комплекс из Германии!</p>
         <p>Доставка Zymafluor осуществляется транспортными компаниями, сроки выполнения заказа оговариваются менеджером Фармитал.
             Вы можете заказать Зимафлуор,Зимафлуор в городах: Одесса, Херсон, Чернигов, Северодонецк, Бердянск, Бровары, Днепр, Винница, Киев, Славянск, Полтава, Краматорск, Белая Церковь, Каменское, Мариуполь, Черновцы, Александрия, Камь янец-подольский, Львов, Запорожье, Кропивницкий, Житомир, Ивано-Франковск, Сумы, Черкассы, Константиновка, Мелитополь, Кривой Рог, Ровно, Луцк, Никополь, Павлоград, Ужгород, Кременчуг, Лисичанск, Хмельницкий, Тернополь, Харьков, Николаев, а также в других населённых пунктах Украины.
@@ -125,11 +127,13 @@
             <div class="wrapper-fon">
                 <div class="row">
                     <div class="logotipe-bottom"><a href="/" class="logo"><img src="./img/farmital-logo.png" alt="Интернет Аптека FarmItal"></a></div>
-                    <ul class="basic-inf column top">
-                        <li><a href="/"><b>Главная</b></a></li>
-                        <li><a href="index-medics.html"><b>Ассортимент Аптеки</b></a></li>
-                        <li><a href="index-contact.html"><b>Контакты</b></a></li>
-                    </ul>
+                    <div class="column top">
+                        <ul class="basic-inf">
+                            <li><a href="/"><b>Главная</b></a></li>
+                            <li><a href="index-medics.html"><b>Ассортимент Аптеки</b></a></li>
+                            <li><a href="index-contact.html"><b>Контакты</b></a></li>
+                        </ul>
+                    </div>
                     <div class="phone-bottom column top">
                         <p><a href="tel:+380979301788" class="tel-bottom"><b>+38(097) 930-17-88</b></a></p>
                         <p><a href="tel:+380959371699"><b>+38(095) 937-16-99</b></a></p>
