--- a/index-zarontin.html
+++ b/index-zarontin.html
@@ -11,8 +11,8 @@
 <body>
     <header>
         <div class="header-top">
-            <div class="wrapper-fon clear">
-                <div class="clear">
+            <div class="wrapper-fon">
+                <div class="nav-top">
                     <nav class="navigation">
                         <div class="logotipe"><a href="/" class="logo"><img src="./img/farmital-logo.png" alt="Інтернет Аптека FarmItal"></a></div>
                         <ul class="nav">
@@ -47,19 +47,21 @@
             </div>
         </div>
     </header>
-    <div class="main-price wrapper clear">
+    <div class="wrapper">
         <h1>Заронтін - (Zarontin)</h1>
         <p class="prod">Виробник: <b>Італія</b></p>
-        <div class="foto-zarontin">
-            <img class="foto" src="img/zarontin12.jpg" alt="купити заронтін, zarontin,заронтин в Україні">
-        </div>
-        <div class="price-zarontin">
-            <h3 class="block">Контактна інформація:</h3>
-            <p><a href="tel:+380979301788" class="phone-price">+38(097) 930-17-88</a></p>
-            <p><a href="tel:+380959371699" class="phone-price">+38(095) 937-16-99</a></p>
-            <p><a href="tel:+380631294099" class="phone-price">+38(063) 129-40-99</a></p>
-            <p class="price"><b>Ціна: 1200 грн/уп.</b></p>
-            <p class="stock"><b>В наявності</b></p>
+        <div class="main-price">
+            <div class="foto-zarontin">
+                <img class="foto" src="img/zarontin12.jpg" alt="купити заронтін, zarontin,заронтин в Україні">
+            </div>
+            <div class="price-zarontin">
+                <h3 class="block">Контактна інформація:</h3>
+                <p><a href="tel:+380979301788" class="phone-price">+38(097) 930-17-88</a></p>
+                <p><a href="tel:+380959371699" class="phone-price">+38(095) 937-16-99</a></p>
+                <p><a href="tel:+380631294099" class="phone-price">+38(063) 129-40-99</a></p>
+                <p class="price"><b>Ціна: 1200 грн/уп.</b></p>
+                <p class="stock"><b>В наявності</b></p>
+            </div>
         </div>
     </div>
     <div class="main-info wrapper">
@@ -150,11 +152,13 @@
             <div class="wrapper-fon">
                 <div class="row">
                     <div class="logotipe-bottom"><a href="/" class="logo"><img src="./img/farmital-logo.png" alt="Інтернет Аптека FarmItal"></a></div>
-                    <ul class="basic-inf column top">
-                        <li><a href="/"><b>Головна</b></a></li>
-                        <li><a href="index-medics.html"><b>Асортимент Аптеки</b></a></li>
-                        <li><a href="index-contact.html"><b>Контакти</b></a></li>
-                    </ul>
+                    <div class="column top">
+                        <ul class="basic-inf">
+                            <li><a href="/"><b>Головна</b></a></li>
+                            <li><a href="index-medics.html"><b>Асортимент Аптеки</b></a></li>
+                            <li><a href="index-contact.html"><b>Контакти</b></a></li>
+                        </ul>
+                    </div>
                     <div class="phone-bottom column top">
                         <p><a href="tel:+380979301788" class="tel-bottom"><b>+38(097) 930-17-88</b></a></p>
                         <p><a href="tel:+380959371699"><b>+38(095) 937-16-99</b></a></p>
