--- a/rus/index-contact.html
+++ b/rus/index-contact.html
@@ -10,8 +10,8 @@
 <body>
     <header>
         <div class="header-top">
-            <div class="wrapper-fon clear">
-                <div class="clear">
+            <div class="wrapper-fon">
+                <div class="nav-top">
                     <nav class="navigation">
                         <div class="logotipe"><a href="/" class="logo"><img src="./img/farmital-logo.png" alt="Інтернет Аптека FarmItal"></a></div>
                         <ul class="nav">
@@ -66,11 +66,13 @@
             <div class="wrapper-fon">
                 <div class="row">
                     <div class="logotipe-bottom"><a href="/" class="logo"><img src="./img/farmital-logo.png" alt="Інтернет Аптека FarmItal"></a></div>
-                    <ul class="basic-inf column top">
-                        <li><a href="/"><b>Главная</b></a></li>
-                        <li><a href="index-medics.html"><b>Ассортимент Аптеки</b></a></li>
-                        <li><a href="index-contact.html"><b>Контакты</b></a></li>
-                    </ul>
+                    <div class="column top">
+                        <ul class="basic-inf">
+                            <li><a href="/"><b>Главная</b></a></li>
+                            <li><a href="index-medics.html"><b>Ассортимент Аптеки</b></a></li>
+                            <li><a href="index-contact.html"><b>Контакты</b></a></li>
+                        </ul>
+                    </div>
                     <div class="phone-bottom column top">
                         <p><a href="tel:+380979301788" class="tel-bottom"><b>+38(097) 930-17-88</b></a></p>
                         <p><a href="tel:+380959371699"><b>+38(095) 937-16-99</b></a></p>
