--- a/rus/index.html
+++ b/rus/index.html
@@ -11,8 +11,8 @@
 <body>
     <header>
         <div class="header-top">
-            <div class="wrapper-fon clear">
-                <div class="clear">
+            <div class="wrapper-fon">
+                <div class="nav-top">
                     <nav class="navigation">
                         <div class="logotipe"><a href="/" class="logo"><img src="./img/farmital-logo.png" alt="Интернет Аптека FarmItal"></a></div>
                         <ul class="nav">
@@ -82,7 +82,7 @@
     <div class="popular wrapper">
         <h2>Самое популярное лекарство</h2>
         <div class="medics">
-            <div class="iruxol ret">
+            <div class="iruxol ret column">
                 <img src="img/irx.jpg" alt="купить ируксол,iruxol,ируксол в Украине">
                 <h2>Ируксол – лечение поражений кожи и ран путем ферментативного очищения от некротических масс и гнойных налетов.</h2>
                 <p class="price"><b>Цена: 630 грн/уп.</b></p>
@@ -90,14 +90,14 @@
                 <p><b><a href="index-iruxol.html">Купить Ируксол на FarmItal</a></b></p>
 
             </div>
-            <div class="colchicine ret">
+            <div class="colchicine ret column">
                 <img src="img/colh.jpg" alt="купить колхицин,colchicine,колхицин в Украине">
                 <h2>Колхицин – эффективно снимает боль при острых приступах подагры, имеет выраженный противовоспалительный эффект.</h2>
-                <p class="price"><b>Цена: 425 грн/уп.</b></p>
+                <p class="price"><b>Цена: 410 грн/уп.</b></p>
                 <p class="stock"><b>В наличии</b></p>
                 <p><b><a href="index-colchicine.html">Купить Колхицин на FarmItal</a></b></p>
             </div>
-            <div class="zarontin ret">
+            <div class="zarontin ret column">
                 <img src="img/zarontin12.jpg" alt="купить заронтин, заронтин,заронтин в Украине">
                 <h2>Заронтин – оказывает противосудорожное, миорелаксивное и анальгетическое действие. Снижает вероятность эпилептического приступа.</h2>
                 <p class="price"><b>Цена: 1200 грн/уп.</b></p>
@@ -111,11 +111,13 @@
             <div class="wrapper-fon">
                 <div class="row">
                     <div class="logotipe-bottom"><a href="/" class="logo"><img src="./img/farmital-logo.png" alt="Интернет Аптека FarmItal"></a></div>
-                    <ul class="basic-inf column top">
-                        <li><a href="/"><b>Главная</b></a></li>
-                        <li><a href="index-medics.html"><b>Ассортимент Аптеки</b></a></li>
-                        <li><a href="index-contact.html"><b>Контакты</b></a></li>
-                    </ul>
+                    <div class="column top">
+                        <ul class="basic-inf">
+                            <li><a href="/"><b>Главная</b></a></li>
+                            <li><a href="index-medics.html"><b>Ассортимент Аптеки</b></a></li>
+                            <li><a href="index-contact.html"><b>Контакты</b></a></li>
+                        </ul>
+                    </div>
                     <div class="phone-bottom column top">
                         <p><a href="tel:+380979301788" class="tel-bottom"><b>+38(097) 930-17-88</b></a></p>
                         <p><a href="tel:+380959371699"><b>+38(095) 937-16-99</b></a></p>
