--- a/index-cytotec.html
+++ b/index-cytotec.html
@@ -3,9 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=2.0">
+    <title>Інтернет-Аптека Фарміталь продаж ліків, ліки на замовлення з Італії</title>
+    <meta name="description" content = "Інтернет-аптека Farmital пропонує якісні ліки із Європи за найнижчими цінами. Швидка доставка замовлення у всі регіони України. Гнучка система оплати.">
+    <meta name="keywords" content="Купити ліки з Європи, Якісні європейські ліки, Ліки, швидка доставка, Якісні ліки недорого, Купити ліки швидко, Ліки з доставкою, Доставка ліків поштою, Купити ліки європейського виробництва, Ліки із Європи недорого, Купити ліки наложеним платежем">
+    <meta name="robots" content="index follow">
+    <meta name="author" content="Інтернет Аптека FarmItal">
+    <meta name="publisher" content="FarmItal">
+    <link rel="canonical" href="https://farmital.com.ua/">
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+    <script type="application/ld+json">[ {
+        "@context" : "http://schema.org",
+        "@type" : "LocalBusiness",
+        "name" : "Інтернет Аптека FarmItal",
+        "image" : "https://farmital.com.ua/img/farmital-logo.png",
+        "telephone" : [ "+38 (097) 930-17-88", "+38 (095) 937-16-99", "+38 (063) 129-40-99" ],
+        "email" : "likital687@gmail.com",
+        "priceRange" : "330-1150 грн"
+    } ]
+    </script>
+    <meta property="og:title" content="Інтернет-Аптека Фарміталь продаж ліків, ліки на замовлення з Італії">
+    <meta property="og:description" content="Інтернет-аптека Farmital пропонує якісні ліки із Європи за найнижчими цінами. Швидка доставка замовлення у всі регіони України. Гнучка система оплати.">
+    <meta property="og:image" content="https://farmital.com.ua/img/farmital-logo.png">
+    <meta property="og:url" content="https://farmital.com.ua">
+    <meta property="og:type" content="website">
     <link rel="stylesheet" href="css/style-cytotec.css">
-    <title>Купити Ліки Сайтотек в Україні - Cytotec таблетки на Фармітал</title>
 </head>
 <body>
     <header>
