--- a/index-medics.html
+++ b/index-medics.html
@@ -38,7 +38,7 @@
             <div class="wrapper-fon">
                 <div class="nav-top">
                     <nav class="navigation">
-                        <div class="logotipe"><a href="/" class="logo"><img src="./img/farmital-logo.png" alt="Інтернет Аптека FarmItal"></a></div>
+                        <div class="logotipe"><a href="/" class="logo"><img src="./img/farmital-logo.png" title="Інтернет Аптека FarmItal" alt="Купити ліки в інтернет аптеці Фарміталь"></a></div>
                         <ul class="nav">
                             <li>
                                 <a href="/" class="start">Головна</a>
@@ -199,7 +199,7 @@
         <div class="footer-top">
             <div class="wrapper-fon">
                 <div class="row">
-                    <div class="logotipe-bottom"><a href="/" class="logo"><img src="./img/farmital-logo.png" alt="Інтернет Аптека FarmItal"></a></div>
+                    <div class="logotipe-bottom"><a href="/" class="logo"><img src="./img/farmital-logo.png" alt="Інтернет Аптека FarmItal" title="Ліки з Італії"></a></div>
                     <div class="column top">
                         <ul class="basic-inf">
                             <li><a href="/"><b>Головна</b></a></li>
